--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,7 @@
     "en": "English",
     "nl": "Dutch",
     "modal_close": "Modal close",
+    "modal_opened": "Modal opened",
     "add_a_language": "Add a language",
     "select_a_language": "Select a language",
     "spoken_level": "Spoken level",
