--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,6 +8,7 @@
     "en": "Anglais",
     "nl": "Nerlandais",
     "modal_close": "Modal fermé",
+    "modal_opened": "Modal ouvert",
     "required_field": "Champ obligatoire",
     "add_a_language": "Ajouter une langue",
     "select_a_language": "Sélectionnez une langue",
