--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -9,6 +9,7 @@
     "en": "Englisch",
     "nl": "Niederländisch",
     "modal_close": "Modal geschlossen",
+    "modal_opened": "Modal offen",
     "add_a_language": "Sprache hinzufügen",
     "select_a_language": "Wählen Sie eine Sprache",
     "spoken_level": "Gesprochene Ebene",
