--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,7 @@
     "advanced": "Advanced",
     "elementary": "Elementary",
     "comprehension_level": "Comprehension level",
-    "number_of_languages": "Number of languages",
+    "number_of_languages": "Number of language",
     "save": "Save",
     "list_of_languages": "List of languages",
     "language": "Language",
