--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -21,7 +21,7 @@
     "advanced": "Avancé",
     "elementary": "Elementaire",
     "comprehension_level": "Niveau de comprehension",
-    "number_of_languages": "Nombre de langues",
+    "number_of_languages": "Nombre de langue",
     "save": "Enregistrer",
     "list_of_languages": "Liste des langues",
     "language": "Langue",
