--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,9 +20,16 @@
     "intermediate": "Intermediate",
     "advanced": "Advanced",
     "elementary": "Elementary",
+    "message": "Message",
+    "deleting": "Deleting",
+    "yes": "Yes",
+    "no": "No",
     "comprehension_level": "Comprehension level",
     "number_of_languages": "Number of language",
+    "do_you_really_want_to_remove_this_language": "Do you really want to remove this language",
+    "this_language_has_already_been_added": "This language has already been added",
     "save": "Save",
+    "cancel": "Cancel",
     "list_of_languages": "List of languages",
     "language": "Language",
     "edit": "Edit",
