--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -20,10 +20,17 @@
     "intermediate": "Intermédiaire",
     "advanced": "Avancé",
     "elementary": "Elementaire",
+    "message": "Message",
     "comprehension_level": "Niveau de comprehension",
     "number_of_languages": "Nombre de langue",
     "save": "Enregistrer",
+    "cancel": "Annuler",
+    "do_you_really_want_to_remove_this_language": "Voulez-vous vraiment supprimer cette langue",
     "list_of_languages": "Liste des langues",
+    "deleting": "Suppression",
+    "yes": "Oui",
+    "no": "Non",
+    "this_language_has_already_been_added": "Cette langue a déjà été ajoutée",
     "language": "Langue",
     "edit": "Modifier",
     "detail": "Détail",
