--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -20,10 +20,17 @@
     "intermediate": "Intermediär",
     "advanced": "Fortgeschrittene",
     "elementary": "Grundschule",
+    "message": "Nachricht",
     "comprehension_level": "Niveau des Verständnisses",
     "number_of_languages": "Anzahl der Sprachen",
+    "do_you_really_want_to_remove_this_language": "Möchten Sie diese Sprache wirklich löschen",
     "save": "Registrieren",
+    "deleting": "Löschen",
+    "yes": "Ja",
+    "no": "Nicht",
+    "cancel": "Abbrechen",
     "list_of_languages": "Liste der Sprachen",
+    "this_language_has_already_been_added": "diese Sprache wurde bereits hinzugefügt",
     "language": "Sprache",
     "edit": "Bearbeiten",
     "detail": "Detail",
